refining TreeBuilderListener